@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/18 22:04:30  jimmyo
+# Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier Delhomme).
+#
 # Revision 1.2  2004/02/01 19:00:29  lupe
 # Ignore devfs,fdescfs,linprocfs in addition to procfs,nfs.
 #
@@ -30,7 +33,7 @@
 
 
 print_values() {
-	/bin/df -P -i -t noprocfs,devfs,fdescfs,linprocfs,nfs | tail +2 | grep -v "//" | while read i; do
+	/bin/df -P -i -t noprocfs,devfs,fdescfs,linprocfs,nfs | sed 1d | grep -v "//" | while read i; do
 		name=`echo $i | sed 's/[\/.]/_/g'| awk '{ print $1 ".value " }'`
 		echo -n "$name "
 		echo $i | awk '{ print $8 }' | cut -f1 -d%
@@ -51,7 +54,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Inode usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
-	/bin/df -P -i -t noprocfs,devfs,fdescfs,linprocfs,nfs | tail +2 | grep -v "//" | while read i; do
+	/bin/df -P -i -t noprocfs,devfs,fdescfs,linprocfs,nfs | sed 1d | grep -v "//" | while read i; do
 		name=`echo $i | sed 's/[\/.]/_/g'| awk '{ print $1 }'`
 		echo -n "$name.label "
 		echo $i | awk '{ print $9 }'
