@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/18 22:04:30  jimmyo
+# Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier Delhomme).
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -37,7 +40,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Filesystem usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
-	df -P -l -x none | tail +2 | grep -v "//" | while read i; do
+	df -P -l -x none | sed 1d | grep -v "//" | while read i; do
 		name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 }'`
 		echo -n "$name.label "
 		echo $i | awk "{ 
@@ -53,7 +56,7 @@ if [ "$1" = "config" ]; then
 	exit 0
 fi
 
-df -P -l  -x none| tail +2 | grep -v "//" | while read i; do
+df -P -l  -x none| sed 1d | grep -v "//" | while read i; do
 	name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 ".value " }'`
 	echo -n "$name "
 	echo $i | awk '{ print $5 }' | cut -f1 -d%
