@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.4  2004/05/18 22:04:29  jimmyo
+# Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier Delhomme).
+#
 # Revision 1.3  2004/01/29 19:39:00  jimmyo
 # Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
 #
@@ -48,7 +51,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Filesystem usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
-	df -P -l  | tail +2 | grep -v "//" | while read i; do
+	df -P -l  | sed 1d | grep -v "//" | while read i; do
 		name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 }'`
 		printf "$name.label "
 		echo $i | awk "{ 
@@ -64,7 +67,7 @@ if [ "$1" = "config" ]; then
 	exit 0
 fi
 
-df -P -l | tail +2 | grep -v "//" | while read i; do
+df -P -l | sed 1d | grep -v "//" | while read i; do
 	name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 ".value " }'`
 	printf "$name "
 	echo $i | awk '{ print $5 }' | cut -f1 -d%
